# tap-googleads

./: README.md  pyproject.toml
.github/: Add_Service_Account_support.patch
tap_googleads/: auth.py  client.py  tap.py
